fixed some spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,14 @@
   0. CUSTOM STYLES
 ################################################################# */
 
+.pad-left-50 {
+	padding-left: 50px;
+}
+
+.pad-right-50 {
+	padding-right: 50px
+}
+
 .view-sources:hover {
 	cursor: pointer;
 	text-decoration: underline;
